Geoloc-service/route/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: geoloc-service
  namespace: swiftpix
  labels:
    app: geoloc-service
    app.kubernetes.io/component: geoloc-service
    app.kubernetes.io/instance: geoloc-service
    app.kubernetes.io/name: geoloc-service
    app.kubernetes.io/part-of: Triggers
spec:
  host: geoloc.swiftpix.software
  to:
    kind: Service
    name: geoloc-service
    weight: 100
  port:
    targetPort: 5020-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
